--- a/packages/core/src/terminologies/value-sets/index.ts.hbs
+++ b/packages/core/src/terminologies/value-sets/index.ts.hbs
@@ -1,2 +1,3 @@
-
-export * from "./something"
+{{#fhirPath definitions.valuesets "Bundle.entry.select(resource).ofType(CodeSystem)"}}
+export * from "./{{camelcase name}}";
+{{/fhirPath}}
