docs(core): :memo: add existing core functions jsdoc

--- a/packages/core/r4b/narratives.ts.hbs
+++ b/packages/core/r4b/narratives.ts.hbs
@@ -8,6 +8,9 @@ import type { {{type}} } from "fhir/r4";
 {{/each}}
 import type { ComplexElementType, ExtractComplexElement } from "./types";
 
+/**
+ * A unit of content used to generate a `Narrative`.
+ */
 export interface NarrativeElement {
   attr: string;
   value: unknown;
@@ -16,7 +19,7 @@ export interface NarrativeElement {
 }
 
 /**
- * Generate a `Narrative`-compatible XHTML representation for complex-types.
+ * Generate a `Narrative`-compatible XHTML representation for complex `Element` types.
  */
 export function narrativeElement<TComplexElement extends ComplexElementType>(
   elementType: TComplexElement,
@@ -63,6 +66,9 @@ function narrativeElement{{type}}(element: {{type}} | null | undefined): string 
 }
 {{/each}}
 
+/**
+ * Generate a `Narrative`-compatible XHTML representation as specified by a `NarrativeElement`.
+ */
 export function narrativeElementByType({attr, value, max, type}: NarrativeElement): string | undefined {
   if(!value) {
     return undefined;
@@ -106,6 +112,9 @@ export function narrativeElementByType({attr, value, max, type}: NarrativeElemen
   }
 }
 
+/**
+ * Generate a `Narrative` for a FHIR resource.
+ */
 export function narrative<TResourceType extends FhirResource>(resource: TResourceType): Narrative {
   switch(resource.resourceType) {
     {{#each (fhirPath data.[profiles-resources] "Bundle/DomainResources")}}
@@ -135,6 +144,9 @@ function narrative{{type}}(resource: {{type}}): Narrative {
 
 {{/each}}
 
+/**
+ * Build a `Narrative` from a list of `NarrativeElement`. This can be used to compose final `Narrative` for FHIR resources.
+ */
 export function buildNarrative(components: NarrativeElement[]): Narrative {
   return {
     status: "generated",
