--- a/packages/docs/src/css/custom.css
+++ b/packages/docs/src/css/custom.css
@@ -8,23 +8,11 @@
 :root {
   --ifm-color-primary: #ad1f2f;
   --ifm-color-primary-dark: #ad1f2f;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary-darker: #871926;
+  --ifm-color-primary-darkest: #60111a;
+  --ifm-color-primary-light: #ab404c;
+  --ifm-color-primary-lighter: #a84651;
+  --ifm-color-primary-lightest: #b04a56;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-}
-
-/* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
