--- a/packages/core/r4b/types.ts.hbs
+++ b/packages/core/r4b/types.ts.hbs
@@ -45,3 +45,19 @@ export type ComplexElementType = AnnotatedComplexElement["elementType"];
 export type ExtractComplexElement<TComplexElement extends ComplexElementType> = Omit<Extract<AnnotatedComplexElement, { elementType: TComplexElement }>, "elementType">;
 
 export type PrimitiveElementType = {{#each (fhirPath data.[profiles-types] "Bundle/PrimitiveElements")}}| "{{type}}"{{/each}};
+
+/**
+ *  Create a new type from T with K attributes required.
+ */
+export type WithRequired<T, K extends keyof T> = T & { [P in K]-?: T[P] };
+
+/**
+ * Returns the given `value` as is if it satisfies `Array.isArray` or otherwise
+ * wraps the given `value` in an array.
+ */
+export function asArray<T>(
+  value: T
+): T extends ReadonlyArray<unknown> ? T : [T] {
+  // eslint-disable-next-line @typescript-eslint/no-explicit-any
+  return Array.isArray(value) ? (value as any) : [value];
+}
