--- a/packages/test-support/r4b/fakes.ts.hbs
+++ b/packages/test-support/r4b/fakes.ts.hbs
@@ -1,5 +1,4 @@
-import { build, buildCodeableConcept } from "@bonfhir/core/r4b/index.js";
-import type { ExtractResource, ResourceType } from "@bonfhir/core/r4b/index.js";
+import { build, buildCodeableConcept, ExtractResource, ResourceType } from "@bonfhir/core/r4b";
 {{#each (fhirPath data.[profiles-types] "Bundle/ComplexElements")}}
 import type { {{type}} } from "fhir/r4";
 {{/each}}
