--- a/packages/terminology/r4b/expansions.ts.hbs
+++ b/packages/terminology/r4b/expansions.ts.hbs
@@ -1,5 +1,5 @@
-import type { TypedValueSet } from "./typed-valueset.js";
-import { CodeableConcept, Coding,  ValueSetExpansionContains } from "fhir/r4.js";
+import type { TypedValueSet } from "./typed-valueset";
+import { CodeableConcept, Coding,  ValueSetExpansionContains } from "fhir/r4";
 
 {{#each (fhirPath data.expansions "Bundle.entry.select(resource).ofType(ValueSet)")}}
 {{#if (in url (readLines "expansions.txt"))}}
